Adapt plugin for ES 5.5